# app/Http/Controllers/Controller.php
@@ -9,7 +9,7 @@ use OpenApi\Attributes as OA;
     title: "Grades API", 
     description: "API Documentation for Student Grade and Curriculum Management"
 )]
-#[OA\Server(url: "http://localhost:8000", description: "Local API Server")]
+#[OA\Server(url: "http://localhost:8003", description: "Local API Server")]
 abstract class Controller
 {
     //
